--- a/asset/style/contact-style.css
+++ b/asset/style/contact-style.css
@@ -1,5 +1,5 @@
 #contact{
-    background-color: #EFEFEF;
+    background-color: #F7F7F7;
 
 }
 
@@ -39,7 +39,7 @@ table > tbody > tr > td{
 }
 
 .input:focus{
-    border-color: #6C9965;
+    border-color: #1C8249;
     border:none;
 }
 .input{
