--- a/asset/style/custom-font.css
+++ b/asset/style/custom-font.css
@@ -9,11 +9,17 @@ body,p,a{
     font-size: 16px !important;
 }
 
+@media (max-width: 768px) {
+    body,p,a {
+        font-size: 14px !important;
+    }
+}
+
 i{padding: 5px 5px;}
 section{padding:80px 0px;}
 section > h3{
-    color: #6C9965;
-    font-size: 24px;
+    color: #1C8249;
+    font-size: 3rem;
     font-weight: bolder;
 
     text-align: center;
@@ -24,6 +30,8 @@ section > h3{
     margin-top: 0px;
     margin-bottom: 50px;
 }
-footer{
-        
+.vcenter {
+    display: inline-block;
+    vertical-align: middle;
+    float: none;
 }
