--- a/asset/style/projet-style.css
+++ b/asset/style/projet-style.css
@@ -15,7 +15,7 @@ body{
 }
 
 
-.myProjet:hover .overlay{
+.project-card:hover .overlay{
     cursor: pointer;
     opacity: 1;
 }
@@ -45,19 +45,20 @@ body{
   opacity: 0;
   border-radius: 5px;
   transition: .5s ease;
-  background-color: #6C9965;
+  background-color: #1C8249;
 }
 
-.myProjet{
+.project-card{
     position: relative;
 
     border-radius: 5px;
     width: 100%;
-    margin: 20px;
-
+    margin: 20px 20px 20px 0px;
+    /*
     -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     -moz-box-shadow:    0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     box-shadow:         0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    */
 }
 
 
@@ -67,7 +68,7 @@ body{
     text-transform: uppercase;
     font-weight: bolder;
     padding:10px;
-    color: #6C9965;
+    color: #1C8249;
 }
 .modal-subtitle{
     text-transform: uppercase;
@@ -75,7 +76,7 @@ body{
 
     padding-top: 10px;
     padding-bottom: 10px;
-    color: #6C9965;
+    color: #1C8249;
 }
 
 /* center verticalement le modal*/
